--- a/deployment/prereq-sap-abap-assistant-on-aws.yml
+++ b/deployment/prereq-sap-abap-assistant-on-aws.yml
@@ -34,7 +34,9 @@ Resources:
         Statement:
           - Sid: AllowInvokeModel
             Effect: Allow
-            Action: bedrock:InvokeModel
+            Action: 
+              - bedrock:InvokeModel
+              - bedrock:InvokeModelWithResponseStream
             Resource:
               - arn:aws:bedrock:*::foundation-model/anthropic.claude-v2
               - arn:aws:bedrock:*::foundation-model/anthropic.claude-v2:1
@@ -42,6 +44,8 @@ Resources:
               - arn:aws:bedrock:*::foundation-model/anthropic.claude-3-haiku-20240307-v1:0
               - arn:aws:bedrock:*::foundation-model/ai21.j2-mid-v1
               - arn:aws:bedrock:*::foundation-model/ai21.j2-ultra-v1
+              - arn:aws:bedrock:*::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0
+              - arn:aws:bedrock:*::foundation-model/meta.llama3-1-405b-instruct-v1:0
       Tags:
         - Key: ApplicationName
           Value: SAP ABAP Assistant
